--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <h1>Video Infos</h1>
+    <div class="">
+      <label for="video">Select a video</label>
+      <input type="file" name="video" accept="video/*" value="">
+    </div>
   </body>
 </html>
