--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </form>
 
     <script>
+      const electron = require("electron");
+      const { ipcRenderer } = electron;
       document.querySelector("form").addEventListener("submit", event => {
         event.preventDefault();
         const file = document.querySelector("form").files[0];
-        
+
       });
     </script>
   </body>
