--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <script>
       const electron = require("electron");
       const { ipcRenderer } = electron;
+
       document.querySelector("form").addEventListener("submit", event => {
         event.preventDefault();
-        const file = document.querySelector("form").files[0];
-
+        const { path } = document.querySelector("input").files[0];
+        ipcRenderer.send("video:submit", path);
       });
     </script>
   </body>
